# Ebauche

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.bat  imgui.ini
.github/workflows/: build-linux.yml  build-windows.yml
resources/shaders/glsl330/: base.vs  bloom.fs  instancing.fs  instancing.vs
src/: engine.h  graph.h  logger.cpp  logger.h  main.cpp  manifest_loader.cpp  manifest_loader.h  math_core.h  physics.cpp  physics.h  renderer.cpp  renderer.h  scanner.cpp  scanner.h  simulation.cpp  simulation.h  ui_overlay.cpp  ui_overlay.h
